# blog

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Procfile  README.md  app.json  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
.docker/: Dockerfile.django
.github/workflows/: pull_request.yml
blog/: celery.py  settings.py  storage.py  storages.py  urls.py
