[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.2.0",
    "django>=5.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ruff>=0.6.4",
]
